<resources>
    <string name="sample_app_name">Mforus</string>
    <string name="action_settings">Settings</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="connection_only_rc">Status: Only RC Connected</string>
    <string name="model_not_available">Firmware version:N/A</string>
    <string name="product_information">Product Information</string>
    <string name="sdk_registration_message">SDK Registration Failed. Please check the bundle ID and your network
        connectivity. </string>
    <string name="sdk_registration_success_message">SDK Registered Successfully.</string>
    <string name="sdk_registration_doing_message">Registering, pls wait...</string>
    <string name="activity_component_list">Component List</string>
    <string name="success">Success</string>
    <string name="login">Login</string>
    <string name="component_listview_component">Component</string>
    <string name="component_listview_camera">Camera</string>
    <string name="component_listview_gimbal">Gimbal</string>
    <string name="component_listview_flight_controller">Flight Controller</string>
    <string name="component_listview_battery">Battery</string>
    <string name="component_listview_airlink">Air Link</string>
    <string name="component_listview_remote_controller">Remote Auto Controller</string>
    <string name="component_listview_mobile_remote_controller">Remote Auto Controller</string>
    <string name="component_listview_mission_manager">Mission Manager (Deprecated)</string>
    <string name="component_listview_timeline_mission_control">Timeline Mission Control</string>
    <string name="component_listview_bluetooth">Bluetooth</string>
    <string name="component_listview_access_locker">Access Locker</string>
    <string name="component_listview_accessory_aggregation">Accessory Aggregation</string>
    <string name="component_listview_audio_file_list_manager">Audio File List Manager</string>
    <string name="component_listview_live_stream">Live Stream</string>
    <string name="component_listview_lidar_view">Lidar</string>
    <string name="component_listview_firmware_upgrade">Firmware Upgrade</string>
    <string name="component_listview_utmiss">UTMISS</string>
    <string name="component_listview_multiple_lens_camera">Multiple Lens Camera</string>
    <string name="component_listview_radar">Radar</string>
    <string name="component_listview_ldm">LDM</string>
    <string name="component_listview_sdk_4_0">4.0 New Interfaces</string>
    <string name="component_listview_waypoint_mission_operator">Waypoint Mission Operator</string>
    <string name="component_listview_follow_me_mission_operator">Follow Me Mission Operator</string>
    <string name="component_listview_keyed_interface">Keyed Interface Sample</string>
    <string name="component_listview_sdk_4_1">4.1 New Interfaces</string>
    <string name="component_listview_app_activation">App Activation and ADSB View</string>
    <string name="component_listview_sdk_4_5">4.5 New Interfaces</string>
    <string name="component_listview_sdk_4_6">4.6 New Interfaces</string>
    <string name="component_listview_sdk_4_8">4.8 New Interfaces</string>
    <string name="component_listview_sdk_4_9">4.9 New Interfaces</string>
    <string name="component_listview_sdk_4_11">4.11 New Interfaces</string>
    <string name="component_listview_sdk_4_12">4.12 New Interfaces</string>
    <string name="component_listview_sdk_4_14">4.14 New Interfaces</string>
    <string name="component_listview_sdk_4_15">4.15 New Interfaces</string>
    <string name="component_listview_sdk_4_16">4.16 New Interfaces</string>
    <string name="component_listview_waypointv2">WaypointV2 Mission Operator</string>
    <string name="component_listview_flight_hub">Flight Hub</string>
    <string name="component_listview_payload">Payload</string>
    <string name="component_listview_redirect_to_djigo">Redirect to DJI Go</string>
    <string name="component_listview_redirect_go4">DJI Go 4</string>
    <string name="component_listview_redirect_go4_failure">Cannot redirect to DJI Go 4, Please check if DJI Go 4 has installed</string>
    <string name="component_listview_redirect_go">DJI Go</string>
    <string name="component_listview_redirect_go_failure">Cannot redirect to DJI Go, Please check if DJI Go has installed</string>
    <string name="component_listview_key_manager">KeyManager</string>
    <string name="camera_subtitle_general">General</string>
    <string name="camera_listview_push_info">Push Info</string>
    <string name="camera_listview_iso">Set/Get ISO</string>
    <string name="camera_subtitle_shoot_photo">Shoot Photo</string>
    <string name="camera_listview_shoot_single_photo">Shoot Single Photo</string>
    <string name="camera_listview_shoot_super_resolutiob_photo">Shoot Super Resolution Photo</string>
    <string name="camera_listview_shoot_interval_photo">Shoot Interval Photo</string>
    <string name="camera_subtitle_record_video">Record Video</string>
    <string name="camera_listview_record_video">Record Video</string>
    <string name="camera_subtitle_playback">Playback</string>
    <string name="camera_listview_playback_push_info">Playback Push Info</string>
    <string name="camera_listview_playback_push_info_description">Playback State Information</string>
    <string name="camera_listview_playback_command">Playback Commands</string>
    <string name="camera_listview_playback_download">Playback Download</string>
    <string name="camera_subtitle_media_download">Media Download</string>
    <string name="camera_listview_download_media">Download Media</string>
    <string name="camera_listview_media_playback">Media Playback</string>
    <string name="moveToPosition">Skip Time</string>
    <string name="battery_subtitle">Battery Information</string>
    <string name="battery_listview_push_info">Push Info</string>
    <string name="battery_listview_set_get_discharge_day">Set/Get Discharge Day</string>
    <string name="remote_controller_subtitle">Remote Controller Information</string>
    <string name="remote_controller_listview_push_info">Push Info</string>
    <string name="flight_controller_subtitle_general">General</string>
    <string name="flight_controller_listview_compass_calibration">Compass Calibration</string>
    <string name="flight_controller_listview_flight_limitation">Flight Limitation</string>
    <string name="flight_controller_subtitle_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_listview_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_subtitle_virtual_stick">Remote Stick Control</string>
    <string name="flight_controller_listview_virtual_stick">Remote Stick Control</string>
    <string name="flight_controller_subtitle_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_networkRTK">Network RTK</string>
    <string name="airlink_subtitle_wifi_airlink">WiFi Airlink</string>
    <string name="airlink_listview_wifi_set_get_ssid">Set/Get WiFi SSID</string>
    <string name="airlink_listview_wifi_reboot_wifi">Reboot WiFi</string>
    <string name="airlink_subtitle_lb_airlink">Light Bridge Airlink</string>
    <string name="airlink_listview_lb_set_get_channel">Set/Get LBAirlink Channel</string>
    <string name="airlink_listview_ocusync_set_get_channel">Set/Get OcusyncAirlink Channel</string>
    <string name="shoot_single_photo">Shoot Single Photo</string>
    <string name="shoot_single_photo_descritpion">Shoot Single Photo</string>
    <string name="record_video_start_record">Start Record</string>
    <string name="record_video_stop_record">Stop Record</string>
    <string name="record_video_initial_time">00:00:00</string>
    <string name="compass_calibration_start_calibration">Start Calibration</string>
    <string name="compass_calibration_stop_calibration">Stop Calibration</string>
    <string name="compass_calibration_description">This view is for calibration. The calibration process includes two
        parts: horizontal calibration and vertical calibration
    </string>
    <string name="flight_limitation_set_height_limitation">Set Height Limitation</string>
    <string name="flight_limitation_toggle_enable_radius_limitation">Limitation ON/OFF</string>
    <string name="flight_limitation_set_radius_limitation">Set Radius Limitation</string>
    <string name="flight_limitation_description">The height limitation is always on, the range of the flight limitation
        is [20, 500]. The range of the radius flight limitation is [15, 500].
    </string>
    <string name="orientation_mode_description">Current Orientation Mode is</string>
    <string name="orientation_mode_home_lock">Home Lock</string>
    <string name="orientation_mode_course_lock">Course Lock</string>
    <string name="orientation_mode_aircraft_heading">Aircraft Heading</string>
    <string name="intelligent_flight_assistant_description">This view is for Intelligent Flight Assistant.</string>
    <string name="set_get_lb_airlink_channel_description">This view will help you understand how to setLBAirlinkChannel.
        Before send setLBAirlinkChannel, the mode of the LB should be in Manual mode. For the auto mode, it will be more
        efficient for the remote control to choose the best channel
    </string>
    <string name="set_get_ocusync_airlink_channel_description">This view will help you understand how to setOcusyncAirlinkChannel.
        Before send setOcusyncAirlinkChannel, the mode of the Ocusync should be in Manual mode. For the auto mode, it will be more
        efficient for the remote control to choose the best channel
    </string>
    <string name="video_feeder_single_camera_product_title">*Inspire1/M100/P3/P4/Mavic... \n Only one live video is available"</string>
    <string name="video_feeder_m600_lb2_title">*M600/LB2 products(with two cameras) \n with follow options:</string>
    <string name="video_feeder_m210_two_camera_title">*M210 Series with two cameras:</string>
    <string name="video_feeder_m300_camera_title">*M300 RTK</string>
    <string name="product_with_multiple_gimbals">*Product with multiple gimbals:</string>
    <string name="video_feeder_enable_single">\tEnable EXT(Single Mode)</string>
    <string name="video_feeder_disable_single">\tDisable EXT(Dual Mode)</string>
    <string name="video_feeder_lb_only">LB Only</string>
    <string name="video_feeder_ext_only">EXT Only</string>
    <string name="video_feeder_both_lb_ext">LB+EXT</string>
    <string name="video_feeder_hdmi_only">HDMI Only</string>
    <string name="video_feeder_av_only">AV Only</string>
    <string name="video_feeder_both_hdmi_av">HDMI+AV</string>
    <string name="video_feeder_right_fpv">Right+FPV</string>
    <string name="video_feeder_left_fpv">Left+FPV</string>
    <string name="video_feeder_left_right">Left+Right</string>
    <string name="video_feeder_set_video_source">Set Video Source</string>
    <string name="video_feeder_set_primary_priority">Set Primary Priority</string>
    <string name="video_feeder_get_primary_priority">Get Primary Priority</string>
    <string name="component_listview_video_feeder">Video Feeder View</string>
    <string name="component_xt2_camera_view">XT2 Camera View</string>
    <string name="camera_calibration">Camera Calibration</string>
    <string name="popup_picker_finish">Finish</string>
    <string name="popup_picker_trigger">Trigger</string>
    <string name="mode_visual">Visual Mode</string>
    <string name="mode_thermal">Thermal Mode</string>
    <string name="status_no_product_connected">Status: No Product Connected</string>
    <string name="register_app">Register to DJI Server</string>
    <string name="open">Start</string>
</resources>